[metadata]
name = commonnexus
version = 0.1.1.dev0
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = A nexus (phylogenetics) file reader and writer (.nex, .trees)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = phylogenetics nexus newick paup splitstree
license = Apache 2.0
license_files = LICENSE
url = https://github.com/dlce-eva/commonnexus
project_urls =
    Bug Tracker = https://github.com/dlce-eva/commonnexus/issues
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    newick>=1.3.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    commonnexus = commonnexus.__main__:main

[options.extras_require]
dev =
    tox
    flake8
    wheel>=0.36
    twine
    build
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
    sphinx-prompt
    sphinxcontrib-programoutput

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov --ignore=tests/fixtures/dendropy
markers =
    dendropy: Test uses the dendropy suite of Nexus test files.

[easy_install]
zip_ok = false

[coverage:run]
source =
    commonnexus
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py37, py38, py39, py310, py311
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
